FIX - fixed cursor glitch + fixed carousel expand icon + fixed project&frame on mobile devices behaviour

--- a/components/Cursor/Cursor.module.scss
+++ b/components/Cursor/Cursor.module.scss
@@ -41,7 +41,7 @@
     .cursorDecoration2 {
       position: absolute;
       height: 10%;
-      width: 100%;
+      width: 102%;
       background: rgb(2, 0, 36);
       background: -moz-linear-gradient(
         90deg,
